@@ -1,3 +1,8 @@
+2017-08-17  Peter Bergner  <bergner@vnet.ibm.com>
+
+	PR target/72804
+	* gcc.target/powerpc/pr72804.c: New test.
+
 2017-08-17  Marek Polacek  <polacek@redhat.com>
 
 	PR middle-end/81814
